add material templates, add basic layots, scss

--- a/src/components/menulist/menulist.scss
+++ b/src/components/menulist/menulist.scss
@@ -1,3 +1,20 @@
-.menu-container {
-    left: 0;
+.menu-wrap {
+    max-width: 400px;
+    width: 300px;
+
+    .MuiList-root {     
+        background-color: white;
+        width: 280px;
+        
+        .MuiListItem-root {
+            width: 100%;
+            padding: 0;
+            margin: 0;
+
+            .MuiListItemText-root {
+                padding-left: 20px;
+            }
+        }
+    }
 }
+
