--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -1,26 +1,61 @@
 .homepage-container {
-    display: block;
-    min-height: 100vh;
-    border: 1px solid #ffffff00;
-    left:0;
+    max-width: 1300px;
+    padding-left: 20px;
+    padding-right: 20px;
 
-    .nav-bar-container {
-        height: 20px;
-        margin-bottom: 5px;
-    }
+    .homepage-grid {
+        margin-left: 20px;
+        justify-content: space-between;
+        display: flex;
 
-    .menu-bar-desktop {
-        position: relative;
-        width: 200px;
-        height: 100%;
-        min-height: auto;
-        margin-bottom: 40px;
-        background-color: #f5f5f5;
+        .MuiList-root {
+            padding-right: 20px;
+            max-width: 350px;
+            margin-left: 20px;
+        }
+
+        .products-wrap {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            max-width: calc(100%-300px);
+            margin-left: 20px;
+            display: block;
+            
+
+            .products-top-wrap {
+                display: flex;
+                margin-bottom: 20px;
+
+                .products-banner {
+                    border-bottom-left-radius: 8px;
+                    max-width: 580px;
+                }
+                .products-actions {
+                    margin-left: 20px;
+                    max-width: calc(100%-600px);
+                }
+            }
+
+            .homepage-top-shops {
+                display: none;
+            }
+        }
     }
 }
 
-@media (max-width: 800px) {
-    .menu-bar-desktop {
+@media (max-width: 991px) {
+    .MuiList-root {
         display: none;
+    }
+}
+
+
+
+@media (max-width: 991px) {
+    .MuiList-root {
+        display: none;
+    }
+    .homepage-top-shops {
+        display: flex;
     }
 }
