--- a/src/components/menulist/menulist.scss
+++ b/src/components/menulist/menulist.scss
@@ -5,14 +5,18 @@
     .MuiList-root {     
         background-color: white;
         width: 280px;
-        
+        padding: 0;
+        margin: 0;
+        padding-top: 20px;
+
+
         .MuiListItem-root {
             width: 100%;
             padding: 0;
             margin: 0;
 
             .MuiListItemText-root {
-                padding-left: 20px;
+                // padding-left: 20px;
             }
         }
     }
