--- a/src/components/menulist/menulist.scss
+++ b/src/components/menulist/menulist.scss
@@ -16,7 +16,7 @@
             margin: 0;
 
             .MuiListItemText-root {
-                // padding-left: 20px;
+                padding: 0;
             }
         }
     }
