--- a/src/components/shop/shop.scss
+++ b/src/components/shop/shop.scss
@@ -15,6 +15,7 @@ button:focus {
 
 body {
     margin: 0;
+    background-color: rgb(245, 245, 245);
 }
 
 .container {
@@ -23,4 +24,5 @@ body {
     margin: auto;
     font-family: "Roboto";
     color: #2e3a4edc;
+
 }
