--- a/src/components/menulist/menulist.scss
+++ b/src/components/menulist/menulist.scss
@@ -1,19 +1,21 @@
-.menu-wrap {
+.MuiPaper-root.menu-wrap {
     max-width: 400px;
     width: 300px;
+    padding: 0;
+    margin: 0;
+    
 
-    .MuiList-root {     
+    .MuiList-root {
+        border-radius: 5px;
         background-color: white;
         width: 280px;
-        padding: 0;
-        margin: 0;
-        padding-top: 20px;
 
+        padding-top: 20px;
+        padding-inline-start: 0px;
 
         .MuiListItem-root {
             width: 100%;
-            padding: 0;
-            margin: 0;
+            padding-left: 20px;
 
             .MuiListItemText-root {
                 padding: 0;
@@ -21,4 +23,3 @@
         }
     }
 }
-
