--- a/src/components/submenu/submenu.scss
+++ b/src/components/submenu/submenu.scss
@@ -1,11 +1,14 @@
 .submenu {
     padding: 0;
-    margin: 0;  
-    width: 800px;
+    margin: 0;
+    // width: 800px;
+    max-width: max-content;
     height: 100vh;
-    
-    // position: relative;
-    // display: flex;
+    position: absolute;
+    left: 323px;
+    top: 124px;
+    // border-radius: 5px;
+    padding: 32px;
 
     &.show {
         display: block;
@@ -13,8 +16,4 @@
     &.hide {
         display: none;
     }
-}
-
-.content-menu {
-    background-color: white;
 }
