--- a/src/components/menulist/menulist.scss
+++ b/src/components/menulist/menulist.scss
@@ -3,6 +3,8 @@
     width: 300px;
     padding: 0;
     margin: 0;
+    margin-top: 10px;
+    
     
 
     .MuiList-root {
@@ -15,11 +17,19 @@
 
         .MuiListItem-root {
             width: 100%;
+            padding: 0;
             padding-left: 20px;
+
 
             .MuiListItemText-root {
                 padding: 0;
             }
         }
+    }
+}
+
+@media (max-width: 991px) {
+    .MuiList-root.menu-wrap {
+        display: none;
     }
 }
