--- a/src/components/cardsubmenu/cardsubmenu.scss
+++ b/src/components/cardsubmenu/cardsubmenu.scss
@@ -1,16 +1,17 @@
-.categorycard {
+.card-submenu {
+    left:-1000px;
+    position: fixed;
     padding: 0;
     margin: 0;
-    max-width: max-content;
-    max-height: max-content;
-    position: absolute;
+    width: 330px;
+    height: max-content;
     border-radius: 5px;
     padding: 32px;
+    z-index: 10;
+    background-color: green;
+    // display: none;
 
     &.show {
         display: block;
-    }
-    &.hide {
-        display: none;
     }
 }
