--- a/src/components/submenu/submenu.scss
+++ b/src/components/submenu/submenu.scss
@@ -9,7 +9,8 @@
     left: 323px;
     top: 110px;
     border-radius: 5px;
-    padding: 32px;
+    padding-left: 20px;
+    padding-top: 10px;
 
     &.show {
         display: block;
@@ -25,13 +26,6 @@
         .menu-level-container {
             padding: 8px;
             margin: 8px;
-            .menu-first-level {
-                p {
-                    font-size: 1.1em;
-                    font-weight: bolder;
-                }
-                padding-bottom: 5px;
-            }
         }
         li {
             list-style-type: none;
