save before bed

--- a/src/components/shop/shop.scss
+++ b/src/components/shop/shop.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 * {
     font-family: "PT Sans", Helvetica, Arial, sans-serif;
     font-size: 16px;
