--- a/src/components/catalogcard/catalogcard.scss
+++ b/src/components/catalogcard/catalogcard.scss
@@ -2,5 +2,29 @@
     width: 300px;
     height: 300px;
     margin: 5px;
-    align-items: center;
+    text-align: center;
+    cursor: pointer;
+
+    .catalog-card-content {
+        margin-left: auto;
+        margin-right: auto;
+        width: 200px;
+        height: 200px;
+        padding: 20px;
+
+        .img-container {
+            width: 120px;
+            height: 120px;
+            margin: 0 auto;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+    }
+
+    &:hover {
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
 }
