--- a/src/components/productcard/productcard.scss
+++ b/src/components/productcard/productcard.scss
@@ -24,7 +24,7 @@
         text-align: center;
 
         .price {
-
+            font-size: 1.5rem;
         }
         button {
             margin-top: 50px;
