--- a/src/components/productfilter/productfilter.scss
+++ b/src/components/productfilter/productfilter.scss
@@ -26,20 +26,44 @@
             }
         }
     }
-    // .producer-filter {
-    //     .MuiAccordionDetails-root {
-    //         padding: 0;
-    //         display: inline;
-    //     }
-    //     .button-check {
-    //         padding-left: 10px;
-    //         cursor: pointer;
-    //         &:hover {
-    //             background-color: rgb(255, 244, 184);
-    //         }
-    //     }
-    //     .MuiFormControlLabel-label {
-    //         font-size: 0.8rem;
-    //     }
-    // }
+    .flag {
+        position: absolute;
+        display: none;
+        text-align: center;
+        width: 80px;
+        height: 60px;
+        left: 270px;
+        background-color: rgb(252, 133, 7);
+        color: white;
+        cursor: pointer;
+
+        &.visible {
+            display: table-cell;
+        }
+        &.hide {
+            display: none;
+        }
+
+        &:hover .triangle {
+            border-right: 15px solid rgb(231, 124, 9);
+        }
+        &:hover {
+            background-color: rgb(231, 124, 9);
+        }
+
+        .triangle {
+            top: 15px;
+            position: absolute;
+            right: 100%;
+            height: 30px;
+            border-top: 15px solid transparent;
+            border-bottom: 15px solid transparent;
+            border-right: 15px solid rgb(252, 133, 7);
+        }
+
+        span {
+            font-size: 12px;
+            padding-top: 15px;
+        }
+    }
 }
