refactor code with new api backedv2

--- a/src/components/productfilter/productfilter.scss
+++ b/src/components/productfilter/productfilter.scss
@@ -66,4 +66,11 @@
             padding-top: 15px;
         }
     }
+    .disable-all-filters {
+        left: 10px;
+        position: relative;
+        font-size: 12px;
+        color: red;
+        cursor: pointer;
+    }
 }
