--- a/src/components/productsPage/productspage.scss
+++ b/src/components/productsPage/productspage.scss
@@ -1,5 +1,19 @@
+.loading {
+    width: 500px;
+    height: 500px;
+}
 .products-page {
-    margin-left: 20px;
-    justify-content: space-between;
-    display: flex;
+    padding-left: 40px;
+    padding-right: 40px;
+    .products-page-title {
+        padding: 15px 0 15px 0;
+        font-size: 16px;
+        color:black;
+        margin: 5px;
+        display: grid;
+    }
+    .products-page-content {
+        justify-content: space-between;
+        display: flex;
+    }
 }
