--- a/src/components/productFilterPanel/productfilterpanel.scss
+++ b/src/components/productFilterPanel/productfilterpanel.scss
@@ -1,4 +1,5 @@
 .product-filter-panel {
+   
     margin-right: 5px;
     padding: 15px;
     height: 80px;
@@ -6,9 +7,12 @@
     display: block;
     font-size: 14px;
     .popover {
+        
         float: left;
         display: block;
         width: 300px;
         margin: 2px;
+        cursor: pointer;
+        
     }
 }
