ended user registration, login and auth

--- a/src/components/authdialog/authdialog.scss
+++ b/src/components/authdialog/authdialog.scss
@@ -1,4 +1,5 @@
 .auth-dialog {
+
     .input-container {
         margin-right: 15px;
         margin-left: 15px;
@@ -8,5 +9,9 @@
         padding-bottom: 15px;
         position: relative;
         float: right;
+    }
+    .error {
+        color: red;
+        padding-top: 15px;
     }
 }
