--- a/src/components/drawerpanel/drawerpanel.scss
+++ b/src/components/drawerpanel/drawerpanel.scss
@@ -1,9 +1,18 @@
 .admin-drawer {
     display: block;
     position: absolute;
-    background-color: black;
+    height: 100vh;
+    .MuiDrawer-docked {
+        height: 100%;
+    }
     .admin-menu {
-        margin-top: 100px;
         width: 150px;
+    }
+    .MuiPaper-elevation0 {
+        margin-top: 100px;
+        z-index: 100;
+        .MuiListItem-button {
+            margin-top: 10px;
+        }
     }
 }
