--- a/src/pages/adminpages/catalog/admincatalog.scss
+++ b/src/pages/adminpages/catalog/admincatalog.scss
@@ -2,29 +2,41 @@
     width: 1100px;
     height: 500px;
     padding: 1rem;
-
     table {
-        border-spacing: 0;
-        border: 1px solid black;
-
-        tr {
-            :last-child {
-                td {
-                    border-bottom: 0;
-                }
+        table-layout: fixed;
+        width: 100%;
+        // border-collapse: collapse;
+        // border: 3px solid purple;
+        th {
+            &:nth-child(1) {
+                width: 10%;
+            }
+            &:nth-child(2) {
+                width: 10%;
+            }
+            &:nth-child(3) {
+                width: 10%;
+            }
+            &:nth-child(4) {
+                width: 35%;
+            }
+            &:nth-child(5) {
+                width: 10%;
+    
+            }
+            &:nth-child(6) {
+                width: 10%;
+            }
+            &:nth-child(7) {
+                width: 40%;
             }
         }
-
-        th,
-        td {
-            margin: 0;
-            padding: 0.5rem;
-            border-bottom: 1px solid black;
-            border-right: 1px solid black;
-
-            :last-child {
-                border-right: 0;
+        td{
+            &:nth-child(1) {
+                height: 50%;
             }
         }
     }
+    
+    
 }
