--- a/src/pages/adminpages/components/styles/enhancedtable.scss
+++ b/src/pages/adminpages/components/styles/enhancedtable.scss
@@ -1,5 +1,8 @@
 .button-open-catalog {
     cursor: pointer;
+    &:hover {
+        background: #c5eaff; color: #fff;
+    }
 }
 .table-footer {
     .num-selected {
