--- a/src/pages/adminpages/components/styles/tabletoolbar.scss
+++ b/src/pages/adminpages/components/styles/tabletoolbar.scss
@@ -1,9 +1,11 @@
 .table-toolbar {
-    .parent-name {
-        color: rgb(105, 105, 105);
-        font-size: 15px;
-        font-weight: bold;
-    }
+    padding: 0;
+    margin: 0;
+    // .parent-name {
+    //     color: rgb(105, 105, 105);
+    //     font-size: 15px;
+    //     font-weight: bold;
+    // }
     .title {
         flex: 1 1 100%;
     }
