--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -1,6 +1,7 @@
 .main-container {
     position: relative;
-    width: 100%;
+    width: 500px;
+    height: 100px;
 }
 .slide-container {
     overflow: hidden;
