--- a/src/app.scss
+++ b/src/app.scss
@@ -15,14 +15,17 @@ button:focus {
 body {
     margin: 0;
     background-color: rgb(245, 245, 245);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .Shop {
     width: 100%;
-    
     margin: auto;
-    font-family: "Roboto";
-    color: #2e3a4edc;
-
+    .main-body {
+        background-color: red;
+        display: flex;
+        justify-content: center;
+    }
 }
 
