--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,7 +1,9 @@
 .header-container {
-    position: relative;
+    position: sticky;
+    left: 0;
     z-index: 500;
     height: 100px;
+    width: 100vw;
     .header-top {
         height: 33px;
         background-color: rgb(252, 133, 7);
