--- a/src/components/menulist/submenu/submenu.scss
+++ b/src/components/menulist/submenu/submenu.scss
@@ -1,25 +1,17 @@
 .submenu {
-    // padding: 0;
-    // margin: 0;
-    // min-height: 500px;
-    // min-width: 500px;
-    // max-width: max-content;
-    // max-height: max-content;
-    // position: absolute;
-    // border-radius: 5px;
-    // padding-left: 20px;
-    // padding-top: 10px;
-    width: 500px;
-    height: 500px;
+    padding: 0;
+    margin: 0;
+    min-height: 500px;
+    min-width: 500px;
+    max-width: max-content;
+    max-height: max-content;
+    position: absolute;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-top: 10px;
     position: fixed;
     z-index: 1000;
 
-    &.show {
-        display: block;
-    }
-    &.hide {
-        display: none;
-    }
     .content-menu {
         display: flex;
         flex-wrap: wrap;
