--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -1,14 +1,48 @@
 .homepage-container {
-    padding-left: 20px;
-    display: flex;
     min-width: 1080px;
-    justify-content: space-between;
     // padding-right: 20px;
+    .homepage-top-container {
+        display: flex;
+        justify-content: space-between;
+        background-color: tomato;
+        .homepage-menu {
+            margin-left: 20px;
+        }
+        .homepage-body {
+            width: 100%;
+            height: max-content;
+            padding: 15px;
+            position: relative;
+            .top-container {
+                height: max-content;
+                width: auto;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                .slider-container {
+                    position: relative;
+                    display: block;
+                }
+                .actions {
+                    width: 100%;
+                    height: 200px;
+                    background-color: green;
+                    margin-left: 15px;
+                }
+            }
+            .middle-container {
+                height: 300px;
+                width: auto;
+                background-color: yellow;
+            }
+        }
+    }
+    .homepage-bottom-container {
+    }
+}
 
-    .homepage-menu {
-        margin-left: 20px;
-    }
-    .homepage-body {
-        
-    }
+.item-carousel {
+    width: 100px;
+    height: 100px;
+    background-color: grey;
 }
