productOne page add login redux/react, etc..

--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -13,23 +13,23 @@
             height: max-content;
             padding: 15px;
 
-                .actions {
-                    padding-left: 0;
-                    width: 580px;
-                    height: 200px;
-                }
-              
+            .actions {
+                padding-left: 0;
+                width: 580px;
+                height: 200px;
+            }
+
             .middle-container {
                 height: 150px;
                 width: 700px;
             }
-   
         }
         .slider-image {
             cursor: pointer;
         }
     }
     .homepage-bottom-container {
+        padding: 1;
     }
 }
 
